--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 Django==4.2.15
 django-cors-headers==4.4.0
+django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 PyJWT==2.9.0
