--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==4.4.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+pillow==10.4.0
 PyJWT==2.9.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
