--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ portal
 u-portal
 .vscode
 __pycache__/
+db.sqlite3
+api/migrations/0002_category_product_image_product_rating_and_more.py
+migrations/
