tested cart and order endpoints

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
+        "cartitem",
+        "categor",
         "corsheaders",
         "filterset",
         "rcdfw",
         "simplejwt",
+        "viewset",
         "zmhvm"
     ]
 }
