tested the rfqs and quotations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "milliwatts",
         "nauctical",
         "rcdfw",
+        "redoc",
         "rfqs",
         "simplejwt",
         "viewset",
