--- a/ubuntu_portal_frontend/package.json
+++ b/ubuntu_portal_frontend/package.json
@@ -22,6 +22,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
     "remixicon": "^4.3.0",
     "shadcn-ui": "^0.2.3",
