--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+amqp==5.2.0
 asgiref==3.8.1
+backports.zoneinfo==0.2.1
+billiard==4.2.0
+celery==5.4.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
 Django==4.2.15
 django-cors-headers==4.4.0
 django-filter==24.3
@@ -6,11 +14,18 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 inflection==0.5.1
+kombu==5.4.0
 packaging==24.1
 pillow==10.4.0
+prompt-toolkit==3.0.47
 PyJWT==2.9.0
+python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.2
+six==1.16.0
 sqlparse==0.5.1
-typing_extensions==4.12.2
+typing-extensions==4.12.2
+tzdata==2024.1
 uritemplate==4.1.1
+vine==5.1.0
+wcwidth==0.2.13
