updated the customuser model with phone_number and country field, was hell for me , hehe so many debugging time lol, u cant mess with databases

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,31 @@
 {
     "cSpell.words": [
+        "allauth",
+        "authtoken",
         "cartitem",
         "categor",
         "corsheaders",
+        "dotenv",
+        "euta",
         "filterset",
         "kiloamperes",
         "kiloohms",
+        "mcsl",
         "millihertz",
         "milliwatts",
+        "modelfields",
         "nauctical",
+        "ompp",
+        "phonenumber",
         "rcdfw",
         "redoc",
         "rfqs",
         "simplejwt",
+        "socialaccount",
+        "uidb",
         "viewset",
-        "zmhvm"
+        "yasg",
+        "zmhvm",
+        "znyo"
     ]
 }
