--- a/ubuntu_portal_frontend/package.json
+++ b/ubuntu_portal_frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-hook-form": "^7.53.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
     "recharts": "^2.12.7",
