--- a/ubuntu_portal_backend/requirements.txt
+++ b/ubuntu_portal_backend/requirements.txt
@@ -2,30 +2,53 @@ amqp==5.2.0
 asgiref==3.8.1
 backports.zoneinfo==0.2.1
 billiard==4.2.0
+cachetools==5.5.0
 celery==5.4.0
+certifi==2024.7.4
+cffi==1.17.0
+charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+cryptography==43.0.0
+defusedxml==0.8.0rc2
+dj-rest-auth==6.0.0
 Django==4.2.15
+django-allauth==64.1.0
 django-cors-headers==4.4.0
+django-countries==7.6.1
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+google-auth==2.34.0
+idna==3.7
 inflection==0.5.1
 kombu==5.4.0
+oauthlib==3.2.2
 packaging==24.1
 pillow==10.4.0
 prompt-toolkit==3.0.47
+pyasn1==0.6.0
+pyasn1-modules==0.4.0
+pycparser==2.22
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python3-openid==3.2.0
 pytz==2024.1
 PyYAML==6.0.2
+requests==2.32.3
+requests-oauthlib==2.0.0
+rsa==4.9
 six==1.16.0
+social-auth-app-django==5.4.2
+social-auth-core==4.5.4
 sqlparse==0.5.1
 typing-extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
+urllib3==2.2.2
 vine==5.1.0
 wcwidth==0.2.13
