--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "@radix-ui/react-navigation-menu": "^1.2.0"
+    "@radix-ui/react-navigation-menu": "^1.2.0",
+    "react-router-dom": "^6.26.1"
   }
 }
