--- a/ubuntu_portal_frontend/package.json
+++ b/ubuntu_portal_frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
+    "react-router-dom": "^6.26.1",
     "recharts": "^2.12.7",
     "remixicon": "^4.3.0",
     "shadcn-ui": "^0.2.3",
