--- a/ubuntu_portal_frontend/package.json
+++ b/ubuntu_portal_frontend/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
