--- a/ubuntu_portal_backend/requirements.txt
+++ b/ubuntu_portal_backend/requirements.txt
@@ -6,6 +6,7 @@ cachetools==5.5.0
 celery==5.4.0
 certifi==2024.7.4
 cffi==1.17.0
+channels==4.1.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -19,17 +20,15 @@ django-allauth==64.1.0
 django-cors-headers==4.4.0
 django-countries==7.6.1
 django-filter==24.3
-django-phonenumber-field==8.0.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 google-auth==2.34.0
-idna==3.8
+idna==3.7
 inflection==0.5.1
 kombu==5.4.0
 oauthlib==3.2.2
 packaging==24.1
-phonenumbers==8.13.44
 pillow==10.4.0
 prompt-toolkit==3.0.47
 pyasn1==0.6.0
