--- a/ubuntu_portal_backend/requirements.txt
+++ b/ubuntu_portal_backend/requirements.txt
@@ -1,6 +1,6 @@
 amqp==5.2.0
 asgiref==3.8.1
-backports.zoneinfo==0.2.1
+# backports.zoneinfo==0.2.1
 billiard==4.2.0
 cachetools==5.5.0
 celery==5.4.0
