--- a/ubuntu_portal_backend/requirements.txt
+++ b/ubuntu_portal_backend/requirements.txt
@@ -1,11 +1,11 @@
 amqp==5.2.0
 asgiref==3.8.1
-#backports.zoneinfo==0.2.1
 billiard==4.2.0
 cachetools==5.5.0
 celery==5.4.0
 certifi==2024.7.4
 cffi==1.17.0
+channels==4.1.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
@@ -31,9 +31,9 @@ oauthlib==3.2.2
 packaging==24.1
 phonenumbers==8.13.44
 pillow==10.4.0
-prompt-toolkit==3.0.47
+prompt_toolkit==3.0.47
 pyasn1==0.6.0
-pyasn1-modules==0.4.0
+pyasn1_modules==0.4.0
 pycparser==2.22
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
@@ -48,7 +48,7 @@ six==1.16.0
 social-auth-app-django==5.4.2
 social-auth-core==4.5.4
 sqlparse==0.5.1
-typing-extensions==4.12.2
+typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.2
