--- a/ubuntu_portal_backend/requirements.txt
+++ b/ubuntu_portal_backend/requirements.txt
@@ -13,6 +13,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 cryptography==43.0.0
 defusedxml==0.8.0rc2
+dj-database-url==2.2.0
 dj-rest-auth==6.0.0
 Django==4.2.15
 django-allauth==64.1.0
@@ -24,6 +25,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 google-auth==2.34.0
+gunicorn==23.0.0
 idna==3.8
 inflection==0.5.1
 kombu==5.4.0
