--- a/ubuntu_portal_backend/requirements.txt
+++ b/ubuntu_portal_backend/requirements.txt
@@ -34,6 +34,7 @@ packaging==24.1
 phonenumbers==8.13.44
 pillow==10.4.0
 prompt_toolkit==3.0.47
+psycopg2-binary==2.9.9
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
