--- a/ubuntu_portal_frontend/package.json
+++ b/ubuntu_portal_frontend/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^5.3.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
+    "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "remixicon": "^4.3.0",
     "shadcn-ui": "^0.2.3",
