--- a/ubuntu_portal_frontend/package.json
+++ b/ubuntu_portal_frontend/package.json
@@ -40,6 +40,7 @@
     "vaul": "^0.9.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
